<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vLlSelectionView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:fitsSystemWindows="true"
    android:overScrollMode="never">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vLlSelectionScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_36"
                android:src="@drawable/ic_celebration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_28"
                android:text="@string/discover_holidays_worldwide"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_32"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/selection_description"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/please_select"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:layout_marginBottom="@dimen/dp_18"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_18"
                    android:layout_marginVertical="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_double_dots"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vTvCountryName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:text="@string/select_country"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_18"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_double_dots"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vTvYearNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_8"
                        android:text="@string/select_year"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/vTvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="@dimen/dp_18"
                android:layout_marginEnd="@dimen/dp_22"
                android:text="@string/next"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground
        android:id="@+id/vCountryListBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dp_36"
        app:collapsedHeight="0dp">

        <include
            android:id="@+id/vCountryList"
            layout="@layout/view_country_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

    </com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground>

    <com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground
        android:id="@+id/vYearPickerBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:collapsedHeight="0dp">

        <include
            android:id="@+id/vYearList"
            layout="@layout/view_year_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground>

</FrameLayout>