<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vLlSelectionView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:fitsSystemWindows="true"
    android:overScrollMode="never">

    <FrameLayout
        android:id="@+id/vLlSelectionScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_36"
                android:src="@drawable/ic_celebration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_28"
                android:text="@string/discover_holidays_worldwide"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_32"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/selection_description"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/please_select"
                android:textColor="@color/purple"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_64"
                android:layout_marginBottom="@dimen/dp_18"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/vFlSelectCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_36"
                    android:background="@drawable/bg_rec_rounded_22">

                    <TextView
                        android:id="@+id/vTvSelectCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/select_country"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_12" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/vFlSelectYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rec_rounded_22">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/select_year"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/sp_12" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground
            android:id="@+id/vBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_36"
            app:collapsedHeight="0dp">

            <include
                android:id="@+id/vCountryList"
                layout="@layout/view_holiday_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />

            <include
                android:id="@+id/vYearList"
                layout="@layout/view_number_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone" />

        </com.heapix.calendarific.utils.view.BottomSheetLayoutWithBackground>

        <!--        <androidx.coordinatorlayout.widget.CoordinatorLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <LinearLayout-->
        <!--                android:id="@+id/vLlSelectionViewCountryBottomSheet"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:background="@drawable/bg_rec_top_rounded_32"-->
        <!--                android:orientation="vertical"-->
        <!--                android:visibility="gone"-->
        <!--                app:behavior_hideable="true"-->
        <!--                app:behavior_peekHeight="0dp"-->
        <!--                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">-->

        <!--                <TextView-->
        <!--                    android:id="@+id/vTvSelectionViewCountryBottomSheet"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_margin="@dimen/dp_18"-->
        <!--                    android:gravity="center"-->
        <!--                    android:text="@string/country"-->
        <!--                    android:textColor="@color/black"-->
        <!--                    android:textSize="@dimen/sp_16" />-->

        <!--                <androidx.recyclerview.widget.RecyclerView-->
        <!--                    android:id="@+id/vRvSelectionViewCountryList"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="match_parent"-->
        <!--                    android:overScrollMode="never"-->
        <!--                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
        <!--                    tools:listitem="@layout/item_holiday_parameter" />-->

        <!--            </LinearLayout>-->

        <!--        </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

    </FrameLayout>

</ScrollView>